# Diorama

./: CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake
include/: Diorama.h  PCH.h  Plugin.h
include/Lib/: Globals.h  InputManager.h  Logger.h  Menu.h  Misc.h  RayCollector.h  Raycast.h  Settings.h
include/UI/: Menu.h  Modals.h
src/: Diorama.cpp  plugin.cpp
src/Lib/: Globals.cpp  Hooks.cpp  InputManager.cpp  Menu.cpp  Misc.cpp  RayCollector.cpp  Raycast.cpp  Settings.cpp
src/UI/: Menu.cpp  Modals.cpp
